[package]
name = "System_Interrupts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
subprocess = "0.2.9"
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef"] }
sysinfo = "0.30.7"
